--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "fs": "^0.0.1-security",
     "geist": "^1.2.1",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.456.0",
     "next": "latest",
     "next-themes": "^0.4.3",
@@ -27,6 +28,7 @@
     "react-icons": "^5.4.0"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "22.9.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "18.3.1",
