--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "prettier": "^3.3.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
